--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipe Index</title>
+    <title>Hello</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
+          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
+
+    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+
 </head>
 <body>
-    <h1>Cake with apple</h1>
-    <p>This paragraph is test</p>
+    <div class="container">
+        <h1>Recipe book</h1>
+        <div class="row" style="margin-top: 10px;">
+            <a href="" th:href="@{/recipe/all}">
+                <div class="col-xs-6 col-md-3 thumbnail align-items-center" style="width: 200px; height: 150px; margin: 30px;">
+                    <h2>Recipes</h2>
+                </div>
+            </a>
+            <a href="">
+                <div class="col-xs-6 col-md-3 thumbnail align-items-center" style="width: 200px; height: 150px; margin: 30px;">
+                    <h2>Profile</h2>
+                </div>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
