Add endpoint recipe/new which gave to as an ability to create new recipe without ingredient Closes #4

--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -65,7 +65,8 @@
                             <!--                            </div>-->
                             <div class="col-md-3 form-group">
                                 <label>Difficulty:</label>
-                                <select class="form-control">
+
+                                <select class="form-control" th:field="*{difficulty}"/>
                                     <option>EASY</option>
                                     <option>MEDIUM</option>
                                     <option>HARD</option>
