--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -17,36 +17,110 @@
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<!--/*@thymesVar id="recipes" type="java.util.List"*/-->
-<!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-primary">
+            <div class="pannel-group">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h1 class="panel-title" > Name  </h1>
+                        <h2 class="panel-title" th:text="${user.name}">//Name//</h2>
+                    </div>
 
-                <div class="panel-heading">
-                    <h1 class="panel-title">User!</h1>
                 </div>
-                <div class="panel-body">
-                    <div class="table-responsive">
-                        <table class="table table-hover ">
-                            <thead class="thead-inverse">
-                            <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                            </tr>
-                            </thead>
-                            </tr>
-                                <td th:text="${user.id}">334</td>
-                                <td th:text="${user.name}">Tasty Goodnees 3</td>
-                            </tr>
-                        </table>
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h1 class="panel-title"> UserName</h1>
+                        <h2 class="panel-title" th:text="${user.username}">//UserName//</h2>
+                    </div>
+
+                </div>
+
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h1 class="panel-title">// Owner`s Ingredients //</h1>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <ul>
+                                    <li th:remove="all">1 Cup of milk</li>
+                                    <li th:remove="all">1 Teaspoon of chocolate</li>
+                                    <li th:each="contentsIngredient : ${user.amountPresent}"
+                                        th:text="${(contentsIngredient.amount +
+                                                                    ' ' + contentsIngredient.ingredient.type +
+                                                                    ' - ' + contentsIngredient.ingredient.name)}">1 Teaspoon of
+                                        Sugar
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <!--                <div class="panel panel-primary">-->
+                <!--                    <div class="panel-heading">-->
+                <!--                        <div class="row">-->
+                <!--                            <div class="col-md-11 ">-->
+                <!--                                <h1 class="panel-title">Ingredients</h1>-->
+                <!--                            </div>-->
+                <!--                            <div class="col-md-1">-->
+                <!--                                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                    <div class="panel-body">-->
+                <!--                        <div class="row">-->
+                <!--                            <div class="col-md-12">-->
+                <!--                                <ul>-->
+                <!--                                    <li th:remove="all">1 Cup of milk</li>-->
+                <!--                                    <li th:remove="all">1 Teaspoon of chocolate</li>-->
+                <!--                                    <li th:each="ingredient : ${recipe.ingredients}"-->
+                <!--                                        th:text="${(ingredient.getAmount() +-->
+                <!--                                        ' ' + ingredient.uom.getDescription() +-->
+                <!--                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>-->
+                <!--                                </ul>-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
             </div>
         </div>
     </div>
 </div>
-
 </body>
+</html>
+<!--<body>-->
+<!--&lt;!&ndash;/*@thymesVar id="recipes" type="java.util.List"*/&ndash;&gt;-->
+<!--&lt;!&ndash;/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/&ndash;&gt;-->
+<!--<div class="container-fluid" style="margin-top: 20px">-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-6 col-md-offset-3">-->
+<!--            <div class="panel panel-primary">-->
+
+<!--                <div class="panel-heading">-->
+<!--                    <h1 class="panel-title">User Profile</h1>-->
+<!--                </div>-->
+<!--                <div class="panel-body">-->
+<!--                    <div class="table-responsive">-->
+<!--                        <table class="table table-hover ">-->
+<!--                            <thead class="thead-inverse">-->
+<!--                            <tr>-->
+<!--                                <th>Id</th>-->
+<!--                                <th>Username</th>-->
+<!--                                <th>Name</th>-->
+<!--                            </tr>-->
+<!--                            </thead>-->
+<!--                            </tr>-->
+<!--                                <td th:text="${user.id}">334</td>-->
+<!--                                <td th:text="${user.name}">Tasty Goodnees 3</td>-->
+<!--                            </tr>-->
+<!--                        </table>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--</body>-->
 </html>
