Fix issues. Add static CSS library files. Fix services. Add pre-load baselines and base user. Fix pages.

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -14,7 +14,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>
 </head>
 <body>
 <div class="container-fluid" style="margin-top: 20px">
@@ -28,17 +28,17 @@
                     </div>
 
                 </div>
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h1 class="panel-title"> UserName</h1>
-                        <h2 class="panel-title" th:text="${user.username}">//UserName//</h2>
-                    </div>
+<!--                <div class="panel panel-primary">-->
+<!--                    <div class="panel-heading">-->
+<!--                        <h1 class="panel-title"> UserName</h1>-->
+<!--                        <h2 class="panel-title" th:text="${user.username}">//UserName//</h2>-->
+<!--                    </div>-->
 
                 </div>
 
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h1 class="panel-title">// Owner`s Ingredients //</h1>
+                        <h1 class="panel-title">Owner`s Ingredients</h1>
                     </div>
                     <div class="panel-body">
                         <div class="row">
