--- a/src/main/resources/templates/ingredient/all.html
+++ b/src/main/resources/templates/ingredient/all.html
@@ -14,14 +14,26 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>
 </head>
 <body>
 <!--/*@thymesVar id="recipes" type="java.util.List"*/-->
 <!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
-<div class="container-fluid" style="margin-top: 20px">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+<div class="container" style="margin-top: 20px">
+<!--    <div class="row">-->
+        <div class="col-md-3">
+            <div class="list-group">
+                <a href="#" class="list-group-item active">
+                    Cras justo odio
+                </a>
+                <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                <a href="#" class="list-group-item">Morbi leo risus</a>
+                <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+                <a href="#" class="list-group-item">Vestibulum at eros</a>
+            </div>
+        </div>
+        <div class="col-md-9">
+<!--        <div class="col-md-9 col-md-offset-3">-->
             <div class="panel panel-primary">
 
                 <div class="panel-heading">
@@ -58,8 +70,10 @@
                     </div>
                 </div>
             </div>
+            <a th:href="@{/}" class="btn btn-dark">Back to Main Menu</a>
+            <a href="#" th:href="@{/ingredient/new}" class="btn btn-primary">Create New Ingredient</a>
         </div>
-    </div>
+<!--    </div>-->
 </div>
 
 </body>
