--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -14,7 +14,11 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>
+
+    <script th:src="@{bootstrap-3.3.min.js}"></script>
+    <link rel="stylesheet" th:href="@{bootstrap-3.3.min.css}">
+
 </head>
 <body>
 <div class="container-fluid" style="margin-top: 20px">
