--- a/src/main/resources/templates/ingredient/all.html
+++ b/src/main/resources/templates/ingredient/all.html
@@ -23,13 +23,13 @@
 <!--    <div class="row">-->
         <div class="col-md-3">
             <div class="list-group">
-                <a href="#" class="list-group-item active">
-                    Cras justo odio
+                <a href="/ingredient/all" class="list-group-item active">
+                    All ingredients
                 </a>
-                <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-                <a href="#" class="list-group-item">Morbi leo risus</a>
-                <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-                <a href="#" class="list-group-item">Vestibulum at eros</a>
+                <a th:remove="all" href="#" class="list-group-item">Dapibus ac facilisis in</a>
+                <a th:remove="all" href="#" class="list-group-item">Morbi leo risus</a>
+                <a th:remove="all" href="#" class="list-group-item">Porta ac consectetur ac</a>
+                <a th:each="selectedCategory : ${categories}" th:href="@{/ingredient/all(category=${selectedCategory.getName()})}" th:text="${selectedCategory.getName()}" class="list-group-item"> pupatext</a>
             </div>
         </div>
         <div class="col-md-9">
