--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                     <h2>Ingredients</h2>
                 </div>
             </a>
-            <a href="">
+            <a href="#" th:href="@{/me}">
                 <div class="col-xs-6 col-md-3 thumbnail align-items-center" style="width: 200px; height: 150px; margin: 30px;">
                     <h2>Profile</h2>
                 </div>
