--- a/src/main/resources/templates/recipe/all.html
+++ b/src/main/resources/templates/recipe/all.html
@@ -22,7 +22,7 @@
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-primary">
+            <div class="panel panel-default">
 
                 <div class="panel-heading">
                     <h1 class="panel-title">My Recipes!</h1>
