--- a/src/main/resources/templates/ingredient/all.html
+++ b/src/main/resources/templates/ingredient/all.html
@@ -31,6 +31,7 @@
                 <a th:remove="all" href="#" class="list-group-item">Porta ac consectetur ac</a>
                 <a th:each="selectedCategory : ${categories}" th:href="@{/ingredient/all(category=${selectedCategory.getName()})}" th:text="${selectedCategory.getName()}" class="list-group-item"> pupatext</a>
             </div>
+            <a href="#" th:href="@{/ingredient-category/new}" class="btn btn-primary">Create New Ingredient Category</a>
         </div>
         <div class="col-md-9">
 <!--        <div class="col-md-9 col-md-offset-3">-->
