Add button on recipe/all that redirect us on a recipe/new #Closes 17

--- a/src/main/resources/templates/recipe/all.html
+++ b/src/main/resources/templates/recipe/all.html
@@ -59,6 +59,9 @@
                         </table>
                     </div>
                 </div>
+                <form method="GET" action="/recipe/new">
+                    <input type="submit" value="Add new Recipe" />
+                </form>
             </div>
         </div>
     </div>
