--- a/src/main/resources/templates/ingredient/creation_form.html
+++ b/src/main/resources/templates/ingredient/creation_form.html
@@ -30,50 +30,39 @@
                         </div>
                         <div class="panel-body">
                             <div class="row">
-                                <div class="col-md-3 form-group">
+                                <div class="col-md-6 form-group">
                                     <label>Ingredient Name:</label>
                                     <input type="text" class="form-control" th:field="*{name}"/>
                                 </div>
                             </div>
-                            <!--                            <div class="row">-->
-                            <!--                                <div class="col-md-3 form-group">-->
-                            <!--                                    <label>Categories:</label>-->
-                            <!--                                </div>-->
-                            <!--                                <div class="col-md-9 form-group">-->
-                            <!--                                    <div class="radio">-->
-                            <!--                                        <label>-->
-                            <!--                                            <input type="checkbox" value=""/>-->
-                            <!--                                            Cat 1-->
-                            <!--                                        </label>-->
-                            <!--                                    </div>-->
-                            <!--                                    <div class="radio" th:remove="all">-->
-                            <!--                                        <label>-->
-                            <!--                                            <input type="checkbox" value=""/>-->
-                            <!--                                            Cat 2-->
-                            <!--                                        </label>-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                            <!--                            </div>-->
-
-                            <!--                                <div class="col-md-3 form-group">-->
-                            <!--                                    <label>Prep Time:</label>-->
-                            <!--                                    <input type="text" class="form-control" th:field="*{prepTime}"/>-->
-                            <!--                                </div>-->
-                            <!--                            <div class="col-md-3 form-group">-->
-                            <!--                                <label>Description:</label>-->
-                            <!--                                <input type="textArea" class="form-control" th:field="*{description}"/>-->
-                            <!--                            </div>-->
-                            <div class="col-md-3 form-group">
-                                <label>Measure type:</label>
-                                <select class="form-control" th:field="*{type}" />
+                            <div class="row">
+                                <div class="col-md-4 form-group">
+                                    <label>Measure type:</label>
+                                    <select class="form-control" th:field="*{type}" />
                                     <option>SPOONS</option>
                                     <option>GRAMS</option>
                                     <option>LITERS</option>
                                     <option>POINTS</option>
-                                </select>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 form-group">
+                                    <label>Choose categories to add:</label>
+                                    <select id="categories" class="form-control" filter="true" multiple="multiple" th:field="*{categories}" />
+                                    <option  th:each="category : ${allCategories}"
+                                             th:value="${{category.id}}"
+                                             th:text="${category.name}">
+                                        Milky
+                                    </option>
+
+                                    <option th:remove="all" >Fruits</option>
+                                    <option th:remove="all">vegetables</option>
+                                    <option th:remove="all">sweet</option>
+                                    </select>
+                                </div>
                             </div>
 
-                            <br>
                                 <!--                            </div>-->
                                 <!--                            <div class="col-md-3 form-group">-->
                                 <!--                                <label>Description:</label>-->
@@ -154,6 +143,8 @@
                         <!--                    </div>-->
                         <!--                    <button type="submit" class="btn btn-primary">Submit</button>-->
                     </div>
+
+
             </form>
         </div>
     </div>
