--- a/src/main/resources/templates/ingredient/show.html
+++ b/src/main/resources/templates/ingredient/show.html
@@ -24,7 +24,7 @@
       <div class="pannel-group">
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h1 class="panel-title" th:text="${indredient.name}">Ingredient Name Here!</h1>
+            <h1 class="panel-title" th:text="${ingredient.name}">Ingredient Name Here!</h1>
           </div>
           <div class="panel-body">
             <!--                        <div class="row">-->
@@ -44,53 +44,60 @@
                 <h5>Type Of Measure:</h5>
               </div>
               <div class="col-md-3">
-                <p th:text="${indredient.type}">GRAMS</p>
+                <p th:text="${ingredient.type}">GRAMS</p>
               </div>
             </div>
           </div>
         </div>
-        <a th:href="@{/ingredient/all}" class="btn btn-dark">Back to Ingredient list</a>
-<!--        <div class="panel panel-primary">-->
-<!--          <div class="panel-heading">-->
-<!--            <h1 class="panel-title" >Type of Measure</h1>-->
-<!--          </div>-->
-<!--          <div class="panel-body">-->
-<!--            <div class="row">-->
-<!--              <div class="col-md-12">-->
-<!--                <p th:text="${ingredient.type}"></p>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-        <!--                <div class="panel panel-primary">-->
-        <!--                    <div class="panel-heading">-->
-        <!--                        <div class="row">-->
-        <!--                            <div class="col-md-11 ">-->
-        <!--                                <h1 class="panel-title">Ingredients</h1>-->
-        <!--                            </div>-->
-        <!--                            <div class="col-md-1">-->
-        <!--                                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                    <div class="panel-body">-->
-        <!--                        <div class="row">-->
-        <!--                            <div class="col-md-12">-->
-        <!--                                <ul>-->
-        <!--                                    <li th:remove="all">1 Cup of milk</li>-->
-        <!--                                    <li th:remove="all">1 Teaspoon of chocolate</li>-->
-        <!--                                    <li th:each="ingredient : ${recipe.ingredients}"-->
-        <!--                                        th:text="${(ingredient.getAmount() +-->
-        <!--                                        ' ' + ingredient.uom.getDescription() +-->
-        <!--                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>-->
-        <!--                                </ul>-->
-        <!--                            </div>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                </div>-->
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="panel panel-default">
+
+        <div class="panel-heading">
+          <h1 class="panel-title">Categories that contain this ingredient:</h1>
+        </div>
+        <div class="panel-body">
+          <div class="table-responsive" >
+            <table class="table table-hover ">
+              <thead class="thead-inverse">
+              <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>View</th>
+                <th>Update</th>
+                <th>Delete</th>
+              </tr>
+              </thead>
+              <tr th:remove="all">
+                <td>123</td>
+                <td>Tasty Goodnees 1</td>
+                <td><a href="#">View</a></td>
+              </tr>
+              <tr th:remove="all">
+                <td>12333</td>
+                <td>Tasty Goodnees 2</td>
+                <td><a href="#">View</a></td>
+              </tr>
+              <tr th:each="category : ${ingredient.getCategories()}">
+                <td th:text="${category.getId()}">334</td>
+                <td th:text="${category.getName()}">Tasty Goodnees 3</td>
+                <td><a href="#" th:href="@{'/recipe/' + ${category.getId()} + '/show'}">View</a></td>
+                <td><a href="#" th:href="@{'/recipe/' + ${category.getId()} + '/update'}">Update</a></td>
+                <td><a href="#" th:href="@{'/recipe/' + ${category.getId()} + '/delete'}">Delete</a></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+      <a th:href="@{/ingredient/all}" class="btn btn-dark">Back to Ingredient list</a>
+      <a th:href="@{/}" class="btn btn-dark">Back to The Main Page</a>
+
+    </div>
+  </div>
+
 </div>
 </body>
 </html>
