--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -16,15 +16,15 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>
 
-    <script th:src="@{bootstrap-3.3.min.js}"></script>
-    <link rel="stylesheet" th:href="@{bootstrap-3.3.min.css}">
+    <script th:src="@{'/bootstrap-3.3.min.js'}"></script>
+    <link rel="stylesheet" th:href="@{'/bootstrap-3.3.min.css'}">
 
 </head>
 <body>
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div class="pannel-group">
+            <div class="panel-group">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h1 class="panel-title" th:text="${recipe.name}">Recipe Description Here!</h1>
@@ -76,6 +76,9 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients/new'}" class="btn btn-default">Add Ingredient</a>
+                </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h1 class="panel-title">Ingredients</h1>
@@ -97,32 +100,6 @@
                         </div>
                     </div>
                 </div>
-                <!--                <div class="panel panel-primary">-->
-                <!--                    <div class="panel-heading">-->
-                <!--                        <div class="row">-->
-                <!--                            <div class="col-md-11 ">-->
-                <!--                                <h1 class="panel-title">Ingredients</h1>-->
-                <!--                            </div>-->
-                <!--                            <div class="col-md-1">-->
-                <!--                                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                    <div class="panel-body">-->
-                <!--                        <div class="row">-->
-                <!--                            <div class="col-md-12">-->
-                <!--                                <ul>-->
-                <!--                                    <li th:remove="all">1 Cup of milk</li>-->
-                <!--                                    <li th:remove="all">1 Teaspoon of chocolate</li>-->
-                <!--                                    <li th:each="ingredient : ${recipe.ingredients}"-->
-                <!--                                        th:text="${(ingredient.getAmount() +-->
-                <!--                                        ' ' + ingredient.uom.getDescription() +-->
-                <!--                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>-->
-                <!--                                </ul>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
             </div>
         </div>
     </div>
