Add endpoint /me/{userId}/ingredients/new Add endpoint me/{userId}/show (help t0 /me/{userId}/ingredients/new )
Closes #11

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -35,7 +35,9 @@
 <!--                    </div>-->
 
                 </div>
-
+                <div>
+                    <a href="#" th:href="@{'/me/' + ${user.id} + '/ingredients/new'}" class="btn btn-default">Add Ingredient</a>
+                </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h1 class="panel-title">Owner`s Ingredients</h1>
