--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -59,32 +59,33 @@
                         </div>
                     </div>
                 </div>
-                <!--                <div class="panel panel-primary">-->
-                <!--                    <div class="panel-heading">-->
-                <!--                        <div class="row">-->
-                <!--                            <div class="col-md-11 ">-->
-                <!--                                <h1 class="panel-title">Ingredients</h1>-->
-                <!--                            </div>-->
-                <!--                            <div class="col-md-1">-->
-                <!--                                <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                    <div class="panel-body">-->
-                <!--                        <div class="row">-->
-                <!--                            <div class="col-md-12">-->
-                <!--                                <ul>-->
-                <!--                                    <li th:remove="all">1 Cup of milk</li>-->
-                <!--                                    <li th:remove="all">1 Teaspoon of chocolate</li>-->
-                <!--                                    <li th:each="ingredient : ${recipe.ingredients}"-->
-                <!--                                        th:text="${(ingredient.getAmount() +-->
-                <!--                                        ' ' + ingredient.uom.getDescription() +-->
-                <!--                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>-->
-                <!--                                </ul>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
+            <div class="table-responsive" th:if="${not #lists.isEmpty(matchedRecipes)}">
+                <table class="table table-hover ">
+                    <thead class="thead-inverse">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>View</th>
+                    </tr>
+                    </thead>
+                    <tr th:remove="all">
+                        <td>123</td>
+                        <td>Tasty Goodnees 1</td>
+                        <td><a href="#">View</a></td>
+                    </tr>
+                    <tr th:remove="all">
+                        <td>12333</td>
+                        <td>Tasty Goodnees 2</td>
+                        <td><a href="#">View</a></td>
+                    </tr>
+                    <tr th:each="recipe : ${matchedRecipes}">
+                        <td th:text="${recipe.id}">334</td>
+                        <td th:text="${recipe.name}">Tasty Goodnees 3</td>
+                        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
             </div>
         </div>
     </div>
