--- a/src/main/resources/templates/recipe/all.html
+++ b/src/main/resources/templates/recipe/all.html
@@ -58,13 +58,11 @@
                         </table>
                     </div>
                 </div>
+                <div class="panel-footer">
+                    <a href="#" th:href="@{'/recipe/new'}" class="btn btn-default">Add Recipe</a>
+                </div>
             </div>
-            <div class="panel-footer">
-                <a href="#" th:href="@{'/recipe/new'}" class="btn btn-default">Add Recipe</a>
-            </div>
-<!--            <form method="GET" action="/recipe/new">-->
-<!--                <input type="submit" value="Add new Recipe" />-->
-<!--            </form>-->
+            <a th:href="@{/}" class="btn btn-dark">Back to Main Menu</a>
         </div>
     </div>
 </div>
