Issue #22 - UI improvements

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+
+    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
+
+    <script th:src="@{'/bootstrap-3.3.min.js'}"></script>
+    <link rel="stylesheet" th:href="@{'/bootstrap-3.3.min.css'}">
+
 </head>
 <body>
   <h1>$)$ (404)</h1>
