--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
-<!--          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"-->
-<!--          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">-->
-<!---->
-<!--    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>-->
-<!---->
-<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
-<!--            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"-->
-<!--            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>-->
-    <script th:src="@{bootstrap-3.3.min.js}"></script>
-    <link rel="stylesheet" th:href="@{bootstrap-3.3.min.css}">
+
+    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
+
+    <script th:src="@{'/bootstrap-3.3.min.js'}"></script>
+    <link rel="stylesheet" th:href="@{'/bootstrap-3.3.min.css'}">
 
 </head>
 <body>
