--- a/src/main/resources/templates/ingredient/all.html
+++ b/src/main/resources/templates/ingredient/all.html
@@ -4,80 +4,67 @@
     <meta charset="UTF-8"/>
     <title>Recipe Home</title>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
-          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
-
     <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>
+    <script th:src="@{'/bootstrap-3.3.min.js'}"></script>
+    <link rel="stylesheet" th:href="@{'/bootstrap-3.3.min.css'}">
 </head>
 <body>
-<!--/*@thymesVar id="recipes" type="java.util.List"*/-->
-<!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
 <div class="container" style="margin-top: 20px">
-<!--    <div class="row">-->
-        <div class="col-md-3">
-            <div class="list-group">
-                <a href="/ingredient/all" class="list-group-item active">
-                    All ingredients
-                </a>
-                <a th:remove="all" href="#" class="list-group-item">Dapibus ac facilisis in</a>
-                <a th:remove="all" href="#" class="list-group-item">Morbi leo risus</a>
-                <a th:remove="all" href="#" class="list-group-item">Porta ac consectetur ac</a>
-                <a th:each="selectedCategory : ${categories}" th:href="@{/ingredient/all(category=${selectedCategory.getName()})}" th:text="${selectedCategory.getName()}" class="list-group-item"> pupatext</a>
-            </div>
-            <a href="#" th:href="@{/ingredient-category/new}" class="btn btn-primary">Create New Ingredient Category</a>
+    <div class="col-md-3">
+        <div class="list-group">
+            <a href="/ingredient/all" class="list-group-item active">
+                All ingredients
+            </a>
+            <a th:remove="all" href="#" class="list-group-item">Dapibus ac facilisis in</a>
+            <a th:remove="all" href="#" class="list-group-item">Morbi leo risus</a>
+            <a th:remove="all" href="#" class="list-group-item">Porta ac consectetur ac</a>
+            <a th:each="selectedCategory : ${categories}"
+               th:href="@{/ingredient/all(category=${selectedCategory.getName()})}"
+               th:text="${selectedCategory.getName()}" class="list-group-item"> pupatext</a>
         </div>
-        <div class="col-md-9">
-<!--        <div class="col-md-9 col-md-offset-3">-->
-            <div class="panel panel-primary">
+        <a href="#" th:href="@{/ingredient-category/new}" class="btn btn-primary">Create New Ingredient Category</a>
+    </div>
+    <div class="col-md-9">
+        <div class="panel panel-primary">
 
-                <div class="panel-heading">
-                    <h1 class="panel-title">Present Ingredients</h1>
-                </div>
-                <div class="panel-body">
-                    <div class="table-responsive">
-                        <table class="table table-hover ">
-                            <thead class="thead-inverse">
-                            <tr>
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Measure</th>
-                                <th>Show</th>
-                            </tr>
-                            </thead>
-                            <tr th:remove="all">
-                                <td>123</td>
-                                <td>Tasty Goodnees 1</td>
-                                <td><a href="#">View</a></td>
-                            </tr>
-                            <tr th:remove="all">
-                                <td>12333</td>
-                                <td>Tasty Goodnees 2</td>
-                                <td><a href="#">View</a></td>
-                            </tr>
-                            <tr th:each="ingredient : ${ingredients}">
-                                <td th:text="${ingredient.getId()}">334</td>
-                                <td th:text="${ingredient.getName()}">Tasty Goodnees 3</td>
-                                <td th:text="${ingredient.getType()}">Huitype</td>
-                                <td><a href="#" th:href="@{'/ingredient/' + ${ingredient.id} + '/show'}">Show</a></td>
-                            </tr>
-                        </table>
-                    </div>
+            <div class="panel-heading">
+                <h1 class="panel-title">Present Ingredients</h1>
+            </div>
+            <div class="panel-body">
+                <div class="table-responsive">
+                    <table class="table table-hover ">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Measure</th>
+                            <th>Show</th>
+                        </tr>
+                        </thead>
+                        <tr th:remove="all">
+                            <td>123</td>
+                            <td>Tasty Goodnees 1</td>
+                            <td><a href="#">View</a></td>
+                        </tr>
+                        <tr th:remove="all">
+                            <td>12333</td>
+                            <td>Tasty Goodnees 2</td>
+                            <td><a href="#">View</a></td>
+                        </tr>
+                        <tr th:each="ingredient : ${ingredients}">
+                            <td th:text="${ingredient.getId()}">334</td>
+                            <td th:text="${ingredient.getName()}">Tasty Goodnees 3</td>
+                            <td th:text="${ingredient.getType()}">Huitype</td>
+                            <td><a href="#" th:href="@{'/ingredient/' + ${ingredient.id} + '/show'}">Show</a></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
-            <a th:href="@{/}" class="btn btn-dark">Back to Main Menu</a>
-            <a href="#" th:href="@{/ingredient/new}" class="btn btn-primary">Create New Ingredient</a>
         </div>
-
-
-<!--    </div>-->
+        <a th:href="@{/}" class="btn btn-dark">Back to Main Menu</a>
+        <a href="#" th:href="@{/ingredient/new}" class="btn btn-primary">Create New Ingredient</a>
+    </div>
 </div>
-
 </body>
 </html>
