--- a/src/main/resources/templates/recipe/all.html
+++ b/src/main/resources/templates/recipe/all.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8"/>
     <title>Recipe Home</title>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
-          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
-
     <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>
+    <script th:src="@{'/bootstrap-3.3.min.js'}"></script>
+    <link rel="stylesheet" th:href="@{'/bootstrap-3.3.min.css'}">
 </head>
 <body>
-<!--/*@thymesVar id="recipes" type="java.util.List"*/-->
-<!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
@@ -35,8 +26,6 @@
                                 <th>ID</th>
                                 <th>Name</th>
                                 <th>View</th>
-<!--                                <th>Update</th>-->
-<!--                                <th>Delete</th>-->
                             </tr>
                             </thead>
                             <tr th:remove="all">
@@ -44,11 +33,6 @@
                                 <td>Tasty Goodnees 1</td>
                                 <td><a href="#">View</a></td>
                             </tr>
-<!--                            <tr th:remove="all">-->
-<!--                                <td>12333</td>-->
-<!--                                <td>Tasty Goodnees 2</td>-->
-<!--                                <td><a href="#">View</a></td>-->
-<!--                            </tr>-->
                             <tr th:each="recipe : ${recipes}">
                                 <td th:text="${recipe.id}">334</td>
                                 <td th:text="${recipe.name}">Tasty Goodnees 3</td>
