--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Recipe Home</title>
 
-    <!-- Latest compiled and minified CSS -->
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
-<!--          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"-->
-<!--          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">-->
-<!---->
-<!--    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>-->
-<!---->
-<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
-<!--            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"-->
-<!--            crossorigin="anonymous" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap-5.3.min.js}"></script>-->
+    <script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
 
     <script th:src="@{bootstrap-3.3.min.js}"></script>
     <link rel="stylesheet" th:href="@{bootstrap-3.3.min.css}">
@@ -34,95 +25,60 @@
             <div class="pannel-group">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h1 class="panel-title" >Profile</h1>
+                        <h1 class="panel-title">Profile</h1>
                     </div>
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h1 class="panel-title">Owner`s Ingredients</h1>
                     </div>
-<!--                    <div class="panel-body">-->
-                        <table class="table">
-                            <tr th:each="contentsIngredient : ${user.amountPresent}">
-                                <td th:text="${(contentsIngredient.amount +
+                    <!--                    <div class="panel-body">-->
+                    <table class="table">
+                        <tr th:each="contentsIngredient : ${user.amountPresent}">
+                            <td th:text="${(contentsIngredient.amount +
                                                         ' ' + contentsIngredient.ingredient.type +
                                                         ' - ' + contentsIngredient.ingredient.name)}">1 Teaspoon of
-                                    Sugar
+                                Sugar
 
-                                </td>
-                            </tr>
-                        </table>
-<!--                    </div>-->
+                            </td>
+                        </tr>
+                    </table>
+                    <!--                    </div>-->
                     <div class="panel-footer">
-                        <a href="#" th:href="@{'/me/' + ${user.id} + '/ingredients/new'}" class="btn btn-default">Add Ingredient</a>
+                        <a href="#" th:href="@{'/me/' + ${user.id} + '/ingredients/new'}" class="btn btn-default">Add
+                            Ingredient</a>
                     </div>
                 </div>
-            <h2>Here is the recipes that you can prepare</h2>
-            <div class="table-responsive" th:if="${not #lists.isEmpty(matchedRecipes)}">
-                <table class="table table-hover ">
-                    <thead class="thead-inverse">
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>View</th>
-                    </tr>
-                    </thead>
-                    <tr th:remove="all">
-                        <td>123</td>
-                        <td>Tasty Goodnees 1</td>
-                        <td><a href="#">View</a></td>
-                    </tr>
-                    <tr th:remove="all">
-                        <td>12333</td>
-                        <td>Tasty Goodnees 2</td>
-                        <td><a href="#">View</a></td>
-                    </tr>
-                    <tr th:each="recipe : ${matchedRecipes}">
-                        <td th:text="${recipe.id}">334</td>
-                        <td th:text="${recipe.name}">Tasty Goodnees 3</td>
-                        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
+                <h2>Here is the recipes that you can prepare</h2>
+                <div class="table-responsive" th:if="${not #lists.isEmpty(matchedRecipes)}">
+                    <table class="table table-hover ">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>View</th>
+                        </tr>
+                        </thead>
+                        <tr th:remove="all">
+                            <td>123</td>
+                            <td>Tasty Goodnees 1</td>
+                            <td><a href="#">View</a></td>
+                        </tr>
+                        <tr th:remove="all">
+                            <td>12333</td>
+                            <td>Tasty Goodnees 2</td>
+                            <td><a href="#">View</a></td>
+                        </tr>
+                        <tr th:each="recipe : ${matchedRecipes}">
+                            <td th:text="${recipe.id}">334</td>
+                            <td th:text="${recipe.name}">Tasty Goodnees 3</td>
+                            <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 </div>
 </body>
-</html>
-<!--<body>-->
-<!--&lt;!&ndash;/*@thymesVar id="recipes" type="java.util.List"*/&ndash;&gt;-->
-<!--&lt;!&ndash;/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/&ndash;&gt;-->
-<!--<div class="container-fluid" style="margin-top: 20px">-->
-<!--    <div class="row">-->
-<!--        <div class="col-md-6 col-md-offset-3">-->
-<!--            <div class="panel panel-primary">-->
-
-<!--                <div class="panel-heading">-->
-<!--                    <h1 class="panel-title">User Profile</h1>-->
-<!--                </div>-->
-<!--                <div class="panel-body">-->
-<!--                    <div class="table-responsive">-->
-<!--                        <table class="table table-hover ">-->
-<!--                            <thead class="thead-inverse">-->
-<!--                            <tr>-->
-<!--                                <th>Id</th>-->
-<!--                                <th>Username</th>-->
-<!--                                <th>Name</th>-->
-<!--                            </tr>-->
-<!--                            </thead>-->
-<!--                            </tr>-->
-<!--                                <td th:text="${user.id}">334</td>-->
-<!--                                <td th:text="${user.name}">Tasty Goodnees 3</td>-->
-<!--                            </tr>-->
-<!--                        </table>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--</body>-->
 </html>
