Issue #19 - Create beautiful error page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,10 @@
 
 </head>
 <body>
-  <h1>$)$ (404)</h1>
-  <p>The item you are requesting is not found</p>
+<div class="container">
+    <h1>$)$ (404)</h1>
+    <p>Looks like you got into trouble, lets try from start</p>
+    <a th:href="@{/}" class="btn btn-danger">Back to Main Menu</a>
+</div>
 </body>
 </html>
