Added back buttons #30

--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -105,6 +105,8 @@
                         </div>
                     </div>
                 </div>
+                <a th:href="@{/recipe/all}" class="btn btn-dark">Back to Browsing Recipes</a>
+                <a th:href="@{/}" class="btn btn-dark">Back Main Menu</a>
             </div>
         </div>
     </div>
