Added more measures to ingredient creation form #24

--- a/src/main/resources/templates/ingredient/creation_form.html
+++ b/src/main/resources/templates/ingredient/creation_form.html
@@ -35,6 +35,9 @@
                                     <option>GRAMS</option>
                                     <option>LITERS</option>
                                     <option>POINTS</option>
+                                    <option>TEASPOONS</option>
+                                    <option>KILOGRAMS</option>
+                                    <option>CUPS</option>
                                     </select>
                                 </div>
                             </div>
